adicionei um paragrafo

--- a/codigo/index.html
+++ b/codigo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum pariatur similique culpa sapiente modi eum deserunt at, fuga impedit explicabo, animi possimus. Ab aut fuga dicta rerum? Provident, repellendus quo?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minima ex eius modi sequi. Consequuntur provident, labore tempore animi ratione dolorum, impedit culpa sapiente ducimus beatae aliquam optio doloremque obcaecati!</p>
 </body>
 </html>
